--- a/style.css
+++ b/style.css
@@ -1,3 +1,40 @@
 body{
     background-color: #1f2937;
 }
+
+.navigation{
+    height: 40px;
+  padding: 16px;
+  background: plum;
+  border: 4px solid indigo;
+  display:flex;
+}
+
+.home{
+        width: 60px;
+        height: 60px;
+        border: 4px solid darkslategray;
+        background: skyblue;
+      }
+
+
+.about{
+         width: 60px;
+        height: 60px;
+        border: 4px solid darkslategray;
+        background: skyblue;
+      }
+
+
+.contact{
+    
+        width: 60px;
+        height: 60px;
+        border: 4px solid darkslategray;
+        background: skyblue;
+      }
+
+.image{
+    height: 80;
+    width: auto;
+}
