--- a/style.css
+++ b/style.css
@@ -2,39 +2,13 @@ body{
     background-color: #1f2937;
 }
 
-.navigation{
-    height: 40px;
-  padding: 16px;
-  background: plum;
-  border: 4px solid indigo;
-  display:flex;
+.container {
+  display: flex;
+  flex-direction: row;
+  height: 50%;
+  justify-content: right;
+  color: #e5e7eb;
+  
 }
 
-.home{
-        width: 60px;
-        height: 60px;
-        border: 4px solid darkslategray;
-        background: skyblue;
-      }
 
-
-.about{
-         width: 60px;
-        height: 60px;
-        border: 4px solid darkslategray;
-        background: skyblue;
-      }
-
-
-.contact{
-    
-        width: 60px;
-        height: 60px;
-        border: 4px solid darkslategray;
-        background: skyblue;
-      }
-
-.image{
-    height: 80;
-    width: auto;
-}
